--- a/JSP/test_information.html
+++ b/JSP/test_information.html
@@ -117,8 +117,12 @@
       </div>
       
       <!-- 검색 폼 -->
-      <form id="search-form">
-        <input type="search" id="search-input" placeholder="책 제목 입력...">
+      <form id="search-form" action="SearchList.jsp" method="get">
+        <select name="searchKey" id="search-key">
+          <option value="name">장소명</option>
+          <option value="address">주소</option>
+        </select>
+        <input type="search" name="searchValue" id="search-input" placeholder="검색어 입력" />
         <button type="submit">검색</button>
       </form>
     </div>
@@ -131,7 +135,7 @@
     <!-- 데이터 목록이 표시되는 영역 -->
     <div id="data-list"></div>
   </div>
-
+<!--
   <script>
     // 예시 데이터 (실제로는 외부 데이터베이스나 API에서 가져올 수 있음)
     const bookData = [
@@ -214,7 +218,7 @@
       }
     });
   </script>
-
+-->
 </body>
 
 </html>
