--- a/PHP/test_information_php.html
+++ b/PHP/test_information_php.html
@@ -117,7 +117,7 @@
       </div>
       
       <!-- 검색 폼 -->
-      <form id="search-form" action="SearchList.jsp" method="get">
+      <form id="search-form" action="search_list.php" method="get">
         <select name="searchKey" id="search-key">
           <option value="name">장소명</option>
           <option value="address">주소</option>
