메인페이지 구현 및 찜목록, 검색 리스트, 검색결과 출력창 구현
html관련 코드들은 전부 html 폴더로 이동

메인페이지
- 푸터(페이지 밑 까만부분) 추가
- 로고 및 로그인/회원가입 버튼의 위치 조정

검색리스트
-> 검색했을 때 간단한 정보들이 나오는 창
- 메인페이지와 동일한 로고, 로그인/회원가입, 푸터, 검색창 구현
- 검색 결과는 하나의 박스 단위로 출력되며(js 코드 추가해줘야 함), 박스에는 사진, 장소명, 주소, 즐겨찾기 버튼이 구현됨
- 즐겨찾기 버튼을 누를 시 색이 변함(즐겨찾기 유무 구분)

검색 결과 창
-> 검색 리스트 나온 장소들 중 한가지를 클릭했을 때 들어가지는 창
- 장소에 대해 좀 더 자세한 설명 구현
- 추후 지도 api를 추가해야 함
 -> 이건 jsp 받은 이후에 해봐야 할듯 합니다
- 세부사항은 검색 리스트와 비슷함

찜목록
-> 로그인 했을 시 찜한 목록들이 출력되는 창
- 검색창 없는 것만 제외하면 검색 리스트와 거의 동일

--- a/HTML/test_information.html
+++ b/HTML/test_information.html
@@ -61,8 +61,6 @@
 
     .top-left-box {
       position: fixed;
-      top: 10px;
-      left: 10px;
       background: rgba(0,0,0,0.5);
       color: #fff;
       padding: 18px 28px;
@@ -75,9 +73,8 @@
 
     .top-right-box {
       position: fixed;
-      top: 10px;
-      right: 10px;
       background: rgba(0,0,0,0.5);
+      right: 8px;
       color: #fff;
       padding: 18px 28px;
       border: none;
@@ -161,7 +158,7 @@
     .gallery-container {
       width: 90%;
       max-width: 1200px;
-      margin: 120px auto 160px auto;
+      margin: 120px auto 100px auto;
       display: flex;
       justify-content: space-between;
       flex-wrap: wrap;
@@ -298,6 +295,28 @@
     #popup-signup:checked ~ .form-popup.signup-form { display: block; }
     #popup-close:checked ~ .form-popup.login-form,
     #popup-close:checked ~ .form-popup.signup-form { display: none; }
+    
+    .site-footer {
+      width: 100%;
+      background: #222;
+      color: #fff;
+      padding: 18px 0;
+      position: relative;
+      margin-top: 60px;
+      font-size: 1rem;
+      letter-spacing: 1px;
+    }
+
+    .footer-content {
+      width: 90%;
+      max-width: 1200px;
+      margin: 0 auto;
+      display: flex;
+      justify-content: center;
+      gap: 32px;
+      align-items: center;
+      text-align: center;
+    }
   </style>
 </head>
 <body>
@@ -343,7 +362,7 @@
     <div class="bg-fade-img img3"></div>
     <a href="file:///c%3A/WebServer_BTeam/JSP/test_information.html" style="text-decoration:none;">
       <div class="top-left-box" style="cursor:pointer; padding:0; background:transparent; box-shadow:none;">
-        <img src="https://drive.google.com/thumbnail?id=1ZmRjZh33NOS-L9Anxc-DLavyhiOOIbgg&sz=w1000" style="height:80px; display:block;">
+        <img src="https://drive.google.com/thumbnail?id=1ZmRjZh33NOS-L9Anxc-DLavyhiOOIbgg&sz=w1000" style="height:120px; display:block;">
       </div>
     </a>
     <div class="bottom-center-box">서울의 야경 명소를 구경하세요</div>
@@ -389,5 +408,13 @@
       <div class="photo-desc">장소4</div>
     </div>
   </div>
+
+  <!--밑에 footer-->
+  <footer class="site-footer">
+    <div class="footer-content">
+      <span>Websever_B</span>
+      <span>상명대 게임전공 웹서버개발</span>
+    </div>
+  </footer>
 </body>
 </html>
