--- a/HTML/PickList.html
+++ b/HTML/PickList.html
@@ -9,6 +9,8 @@
     .top-left-box {
       position: fixed;
       background: rgba(0,0,0,0.5);
+      top: 8px;
+      left: 8px;
       color: #fff;
       padding: 18px 28px;
       border: none;
@@ -17,21 +19,50 @@
       z-index: 10;
       box-shadow: 0 2px 8px rgba(0,0,0,0.08);
     }
-
-    .top-right-box {
+    .top-buttons {
       position: fixed;
-      background: rgba(0,0,0,0.5);
+      top: 8px;
       right: 8px;
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      z-index: 10;
+    }
+    .favorite-link {
+      color: #fff;
+      font-size: 1.2rem;
+      cursor: pointer;
+      padding: 18px 28px; /* 로그인 버튼과 동일한 패딩 */
+      border-radius: 4px;
+      background: rgba(0,0,0,0.5); /* 로그인 버튼과 동일한 배경 */
+      box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+      display: flex;
+      align-items: center;
+      height: 44px; /* 로그인 버튼과 동일한 높이 */
+      text-decoration: none;
+      user-select: none;
+    }
+    .favorite-link:hover {
+      background: rgba(0,0,0,0.7); /* hover 시 배경 진하게 */
+    }
+    .top-right-box {
+      background: rgba(0,0,0,0.5);
       color: #fff;
       padding: 18px 28px;
       border: none;
       border-radius: 4px;
       font-size: 1.2rem;
-      z-index: 10;
       box-shadow: 0 2px 8px rgba(0,0,0,0.08);
       text-align: center;
       cursor: pointer;
       user-select: none;
+      display: flex;
+      align-items: center;
+      height: 44px;
+      transition: background 0.15s;
+    }
+    .top-right-box:hover {
+      background: rgba(0,0,0,0.7);
     }
 
     /* 로그인/회원가입 radio 토글 숨김 */
@@ -230,8 +261,13 @@
   <input type="radio" name="popup" id="popup-login" class="hidden-toggle">
   <input type="radio" name="popup" id="popup-signup" class="hidden-toggle">
 
-  <!-- 로그인/회원가입 버튼 (body 바로 아래) -->
-  <label for="popup-login" class="top-right-box">로그인/회원가입</label>
+  <!-- 상단 오른쪽 버튼 그룹 -->
+  <div class="top-buttons">
+    <a href="file:///c:/WebServer_BTeam/HTML/PickList.html" class="favorite-link">
+      즐겨찾기 목록
+    </a>
+    <label for="popup-login" class="top-right-box">로그인/회원가입</label>
+  </div>
 
   <!-- 로그인 폼 (body 바로 아래) -->
   <div class="form-popup login-form">
@@ -262,7 +298,7 @@
 
   <!-- section-with-background 및 나머지 컨텐츠는 아래에 둡니다 -->
   <div class="section-with-background">
-    <a href="file:///c%3A/WebServer_BTeam/JSP/test_information.html" style="text-decoration:none;">
+    <a href="file:///c%3A/WebServer_BTeam/HTML/test_information.html" style="text-decoration:none;">
       <div class="top-left-box" style="cursor:pointer; padding:0; background:transparent; box-shadow:none;">
         <img src="https://drive.google.com/thumbnail?id=1ZmRjZh33NOS-L9Anxc-DLavyhiOOIbgg&sz=w1000" style="height:120px; display:block;">
       </div>
